--- a/homepage.html
+++ b/homepage.html
@@ -233,7 +233,9 @@
                 <a class="nav-link" href="#">Actions</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="./src/pages/about/about.html"
+                  >About Us</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact Us</a>
@@ -736,69 +738,73 @@
             </div>
           </div>
           <div class="row mx-auto d-flex justify-content-around  ">
-            <div class="col-lg-5 auction-parent">
-              <div class="row">
-                <div class="col-lg-6 col-md-6">
-                  <div class="auction-parent-content ">
-                    <div>
-                      <p>لاوسي غطاس</p>
-                      <div class="d-flex flex-row-reverse ">
-                        <p>آخر عطاء:</p>
-                        <p>1,200 د.إ</p>
-                      </div>
+            <div class="col-lg-6 ">
+              <div class="container">
+                <div class="row auction-parent">
+                  <div class="col-lg-6 col-md-6">
+                    <div class="auction-parent-content ">
                       <div>
-                        <p>وقت إلإنتهاء:</p>
+                        <p>لاوسي غطاس</p>
+                        <div class="d-flex flex-row-reverse ">
+                          <p>آخر عطاء:</p>
+                          <p>1,200 د.إ</p>
+                        </div>
+                        <div>
+                          <p>وقت إلإنتهاء:</p>
+                        </div>
                       </div>
-                    </div>
-                    <div>Calender</div>
-                    <div>
-                      <button class="auction-parent-button ">
-                        قم بالمزايدة الآن
-                      </button>
+                      <div>Calender</div>
+                      <div>
+                        <button class="auction-parent-button ">
+                          قم بالمزايدة الآن
+                        </button>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                  <div class="auction-parent-img">
-                    <img
-                      src="./src/assets/homepageimages/actionimages/image 10 (1).png"
-                      alt=""
-                      class="card_img"
-                    />
+                  <div class="col-lg-6 col-md-6">
+                    <div class="auction-parent-img">
+                      <img
+                        src="./src/assets/homepageimages/actionimages/image 10 (1).png"
+                        alt=""
+                        class="card_img"
+                      />
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-1"></div>
-            <div class="col-lg-5 auction-parent">
-              <div class="row">
-                <div class="col-lg-6 col-md-6">
-                  <div class="auction-parent-content ">
-                    <div>
-                      <p>لاوسي غطاس</p>
-                      <div class="d-flex flex-row-reverse ">
-                        <p>آخر عطاء:</p>
-                        <p>1,200 د.إ</p>
-                      </div>
+            <!-- <div class="col-1"></div> -->
+            <div class="col-lg-6 ">
+              <div class="container">
+                <div class="row  auction-parent ">
+                  <div class="col-lg-6 col-md-6 ">
+                    <div class="auction-parent-content ">
                       <div>
-                        <p>وقت إلإنتهاء:</p>
+                        <p>لاوسي غطاس</p>
+                        <div class="d-flex flex-row-reverse ">
+                          <p>آخر عطاء:</p>
+                          <p>1,200 د.إ</p>
+                        </div>
+                        <div>
+                          <p>وقت إلإنتهاء:</p>
+                        </div>
                       </div>
-                    </div>
-                    <div>Calender</div>
-                    <div>
-                      <button class="auction-parent-button ">
-                        قم بالمزايدة الآن
-                      </button>
+                      <div>Calender</div>
+                      <div>
+                        <button class="auction-parent-button ">
+                          قم بالمزايدة الآن
+                        </button>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                  <div class="auction-parent-img ">
-                    <img
-                      src="./src/assets/homepageimages/actionimages/image 10 (1).png"
-                      alt=""
-                      class="card_img"
-                    />
+                  <div class="col-lg-6 col-md-6">
+                    <div class="auction-parent-img">
+                      <img
+                        src="./src/assets/homepageimages/actionimages/image 10 (1).png"
+                        alt=""
+                        class="card_img"
+                      />
+                    </div>
                   </div>
                 </div>
               </div>
@@ -971,7 +977,6 @@
     ></script>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-
     <script>
       //  <!-- Product Swiper -->
                 var swiper = new Swiper(".mySwiper", {
