The (generated by blackbox.ai )

--- a/homepage.html
+++ b/homepage.html
@@ -23,16 +23,17 @@
   </head>
 
   <body>
-    <!-- // ==============================|| TOP Bar START ||============================== // -->
+  
 
     <div class="homepage">
+        <!-- // ==============================|| TOP Bar START ||============================== // -->
       <div class="container-fluid topbar-parent ">
         <div class="row">
           <div class="col">
             <div class="topbar-content d-flex m-auto ">
               <img
                 class="topbar-content-img"
-                src="./src/assets/homePage1Assets/x.svg"
+                src="./src/assets/homepageimages/x.svg"
                 alt=""
               />
               <div class="m-auto">
@@ -257,7 +258,7 @@
       <!-- // ==============================|| HOME PAGE  START||============================== // -->
       <header class="header">
         <div class="header-img">
-          <img src="./images/product.png" class="img-fluid" alt="" />
+          <img src="./src/assets/homepageimages/product.png" class="img-fluid" alt="" />
         </div>
         <div class="container home-main p-0  gap-0  ">
           <div class="home-content ">
